--- a/package.json
+++ b/package.json
@@ -5,21 +5,35 @@
   "author": "Cameron Blandford <cam.blandford@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "PORT=3333 nuxt",
     "build": "nuxt build",
-    "start": "nuxt start",
+    "dev": "DEBUG=nuxt:* nodemon --watch api/ --watch config/ api/index.js",
+    "prestart": "yarn run build",
+    "start": "NODE_ENV=production node api/",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "nuxt": "^1.0.0"
+    "@feathersjs/configuration": "^1.0.2",
+    "@feathersjs/errors": "^3.3.0",
+    "@feathersjs/express": "^1.2.2",
+    "@feathersjs/feathers": "^3.1.5",
+    "@feathersjs/socketio": "^3.2.1",
+    "compression": "^1.7.2",
+    "cors": "^2.8.4",
+    "helmet": "^3.12.0",
+    "nuxt": "^1.0.0",
+    "serve-favicon": "^2.5.0",
+    "winston": "^2.4.2"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
-    "eslint": "^4.15.0",
+    "eslint": "^4.19.1",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
-    "eslint-plugin-vue": "^4.0.0"
+    "eslint-plugin-vue": "^4.0.0",
+    "mocha": "^5.1.1",
+    "request": "^2.85.0",
+    "request-promise": "^4.2.2"
   }
 }
