--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@feathersjs/feathers": "^3.1.5",
     "@feathersjs/socketio": "^3.2.1",
     "compression": "^1.7.2",
+    "cookie-storage": "^3.1.0",
     "cors": "^2.8.4",
     "feathers-mongodb": "^3.1.0",
     "feathers-vuex": "^1.3.0",
