--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
     "feathers-mongodb": "^3.1.0",
     "feathers-vuex": "^1.3.0",
     "helmet": "^3.12.0",
+    "js-yaml": "^3.11.0",
     "mongodb": "^3.1.0-beta4",
     "nuxt": "^1.0.0",
     "serve-favicon": "^2.5.0",
     "winston": "^2.4.2"
   },
   "devDependencies": {
+    "axios": "^0.18.0",
     "babel-eslint": "^8.2.1",
     "eslint": "^4.19.1",
     "eslint-friendly-formatter": "^3.0.0",
