--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cookie-storage": "^3.1.0",
     "cors": "^2.8.4",
     "feathers-mongodb": "^3.1.0",
+    "feathers-mongodb-fuzzy-search": "^1.1.1",
     "feathers-vuex": "^1.3.0",
     "helmet": "^3.12.0",
     "js-yaml": "^3.11.0",
