--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@feathersjs/express": "^1.2.2",
     "@feathersjs/feathers": "^3.1.5",
     "@feathersjs/socketio": "^3.2.1",
+    "coffee-loader": "^0.9.0",
+    "coffeescript": "^2.3.1",
     "compression": "^1.7.2",
     "cookie-storage": "^3.1.0",
     "cors": "^2.8.4",
@@ -39,8 +41,12 @@
     "helmet": "^3.12.0",
     "js-yaml": "^3.11.0",
     "mongodb": "^3.1.0-beta4",
+    "node-sass": "^4.9.0",
     "nodemon": "^1.17.4",
     "nuxt": "^1.0.0",
+    "pug": "^2.0.3",
+    "pug-loader": "^2.4.0",
+    "sass-loader": "^7.0.1",
     "serve-favicon": "^2.5.0",
     "winston": "^2.4.2"
   },
